<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewBoardPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22343C"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:showDividers="middle">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="0"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/buttonLike"
                    android:layout_width="26dp"
                    android:layout_height="24dp"
                    android:layout_weight=".6"
                    android:background="@drawable/ic_heart"
                    android:onClick="handleLikeBtnOnPress"
                    android:tint="@color/teal_700" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewNumLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textColor="@color/color_white" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGenreHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/board_genre"
            android:textColor="@color/color_paragraph"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="@color/color_paragraph" />

        <TextView
            android:id="@+id/textViewBodyHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/board_body"
            android:textColor="@color/color_paragraph"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/color_paragraph" />

        <TextView
            android:id="@+id/textViewCommentsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/board_comments"
            android:textColor="@color/color_paragraph"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="top|left"
            android:hint="@string/board_add_comment"
            android:imeActionLabel="Post"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:overScrollMode="always"
            android:textColor="@color/color_paragraph"
            android:textColorHint="@color/color_paragraph"
            android:textSize="14sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="4dp"
            android:onClick="handleCommentBtnOnPress"
            android:text="@string/board_comment" />

        <ListView
            android:id="@+id/listViewComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        </ListView>
    </LinearLayout>
</ScrollView>